[package]
name = "range_management_tacf_control"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="1.0.68"
serde = { version = "1.0.130", features = ["derive"] }

tokio = { version = "1", features = ["full"] }

actix = "0.10"
actix-web = "3"
actix-web-actors = "3"

redis = "0.21.4"
