[package]
name = "range_management_tacf_control"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="1.0.68"
serde = { version = "1.0.130", features = ["derive"] }

tokio = { version = "1", features = ["full"] }

actix = "0.10"
actix-web = "3"
actix-web-actors = "3"


ws = "0.9.1"
chrono = "0.4.19"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
local_ipaddress = "0.1.3"
redis = "0.21.4"

log = "0.4.14"
env_logger = "0.9.0"
