[package]
name = "range_management_tacf_control"
version = "1.0.6"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json="1.0.68"
serde = { version = "1.0.130", features = ["derive"] }

ws = "0.9.1"

redis = "0.21.4"

log = "0.4.14"
env_logger = "0.9.0"

regex = "1.5.4"

chrono = "0.4.19"
